// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`simulate ruleObjectsFailed creates a system with ruleObjectsFailed based on profile failing rules 1`] = `
[
  {
    "profiles": [
      {
        "rules": [
          {
            "compliant": true,
            "title": "a",
          },
          {
            "compliant": false,
            "title": "b",
          },
        ],
      },
      {
        "rules": [
          {
            "compliant": false,
            "title": "c",
          },
          {
            "compliant": false,
            "title": "d",
          },
          {
            "compliant": true,
            "title": "e",
          },
        ],
      },
    ],
    "ruleObjectsFailed": [
      {
        "compliant": false,
        "title": "b",
      },
      {
        "compliant": false,
        "title": "c",
      },
      {
        "compliant": false,
        "title": "d",
      },
    ],
    "supported": false,
    "testResultProfiles": [
      {
        "rules": [
          {
            "compliant": true,
            "title": "a",
          },
          {
            "compliant": false,
            "title": "b",
          },
        ],
      },
      {
        "rules": [
          {
            "compliant": false,
            "title": "c",
          },
          {
            "compliant": false,
            "title": "d",
          },
          {
            "compliant": true,
            "title": "e",
          },
        ],
      },
    ],
  },
]
`;

exports[`simulate ruleObjectsFailed creates a system with supported property 1`] = `
[
  {
    "profiles": [
      {
        "rules": [
          {
            "compliant": true,
            "title": "a",
          },
          {
            "compliant": false,
            "title": "b",
          },
        ],
        "supported": true,
      },
      {
        "rules": [
          {
            "compliant": false,
            "title": "c",
          },
          {
            "compliant": false,
            "title": "d",
          },
          {
            "compliant": true,
            "title": "e",
          },
        ],
        "supported": true,
      },
    ],
    "ruleObjectsFailed": [
      {
        "compliant": false,
        "title": "b",
      },
      {
        "compliant": false,
        "title": "c",
      },
      {
        "compliant": false,
        "title": "d",
      },
    ],
    "supported": true,
    "testResultProfiles": [
      {
        "rules": [
          {
            "compliant": true,
            "title": "a",
          },
          {
            "compliant": false,
            "title": "b",
          },
        ],
        "supported": true,
      },
      {
        "rules": [
          {
            "compliant": false,
            "title": "c",
          },
          {
            "compliant": false,
            "title": "d",
          },
          {
            "compliant": true,
            "title": "e",
          },
        ],
        "supported": true,
      },
    ],
  },
]
`;

exports[`simulate ruleObjectsFailed should set rule objects failed even if some have no profiles or rules 1`] = `
[
  {
    "profiles": [],
    "ruleObjectsFailed": [],
    "supported": true,
    "testResultProfiles": [],
  },
  {
    "profiles": [
      {
        "rules": [],
      },
    ],
    "ruleObjectsFailed": [],
    "supported": false,
    "testResultProfiles": [
      {
        "rules": [],
      },
    ],
  },
  {
    "profiles": [
      {
        "rules": [
          {
            "compliant": true,
            "title": "a",
          },
          {
            "compliant": false,
            "title": "b",
          },
        ],
      },
    ],
    "ruleObjectsFailed": [
      {
        "compliant": false,
        "title": "b",
      },
    ],
    "supported": false,
    "testResultProfiles": [
      {
        "rules": [
          {
            "compliant": true,
            "title": "a",
          },
          {
            "compliant": false,
            "title": "b",
          },
        ],
      },
    ],
  },
]
`;
